// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android InvalidIcon should render correctly 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "rgb(22, 22, 22)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
      Object {
        "fontSize": 16,
      },
      Array [
        Object {
          "position": "absolute",
          "right": 6,
        },
        Object {
          "color": "rgb(231, 8, 102)",
        },
      ],
    ]
  }
>
  
</Text>
`;

exports[`Android ValidIcon should render correctly 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "rgb(22, 22, 22)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
      Object {
        "fontSize": 16,
      },
      Array [
        Object {
          "position": "absolute",
          "right": 6,
        },
        Object {
          "color": "rgb(12, 131, 138)",
        },
      ],
    ]
  }
>
  
</Text>
`;
